Fix POM